--- a/Styles/bootstrap.css
+++ b/Styles/bootstrap.css
@@ -11,7 +11,9 @@
 /* Reset.less
  * Props to Eric Meyer (meyerweb.com) for his CSS reset file. We're using an adapted version here	that cuts out some of the reset HTML elements we will never need here (i.e., dfn, samp, etc).
  * ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- */
-html, body {
+html, body 
+{
+  font-family: 'Telex', sans-serif;
   margin: 0;
   padding: 0;
 }
