--- a/Styles/bootstrap.css
+++ b/Styles/bootstrap.css
@@ -1759,6 +1759,7 @@ a.menu:after, .dropdown-toggle:after {
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
   border-radius: 6px;
+  background-image: "../Photos/board2.jpg";
 }
 .hero-unit h1 {
   margin-bottom: 0;
@@ -2428,7 +2429,7 @@ button.btn::-moz-focus-inner, input[type=submit].btn::-moz-focus-inner {
 
 #mainphoto
 {
-  background-image: url(pages/group.jpg);
+  background-image: url('group.jpg');
 }
 
 .center 
